--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="images/5.png" alt="Dirkx Techniek logo" class="logo">
+            <img src="5.png" alt="Dirkx Techniek logo" class="logo">
             <div class="header-text">
                 <h1>DIRKX TECHNIEK</h1>
                 <p>Technische Dienstverlening</p>
@@ -35,15 +35,15 @@
     <!-- Foto sectie -->
     <section class="content">
         <figure class="content-item fade-in">
-            <img src="images/1.JPG" alt="Inkorten van de poten">
+            <img src="1.JPG" alt="Inkorten van de poten">
             <figcaption>Soms moet er toch nog een stukkie af...</figcaption>
         </figure>
         <figure class="content-item fade-in">
-            <img src="images/2.JPG" alt="Onderdeel krijgt nieuwe beplating">
+            <img src="2.JPG" alt="Onderdeel krijgt nieuwe beplating">
             <figcaption>Soms moet er een nieuw laagie op...</figcaption>
         </figure>
         <figure class="content-item fade-in">
-            <img src="images/4.JPG" alt="Versleten onderdeel klaar voor vervanging">
+            <img src="4.JPG" alt="Versleten onderdeel klaar voor vervanging">
             <figcaption>Soms is het gewoon aan vervanging toe...</figcaption>
         </figure>
     </section>
