--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <figcaption>Soms moet er een nieuw laagie op...</figcaption>
         </figure>
         <figure class="content-item fade-in">
-            <img src="images/4.jpg" alt="Versleten onderdeel klaar voor vervanging">
+            <img src="images/4.JPG" alt="Versleten onderdeel klaar voor vervanging">
             <figcaption>Soms is het gewoon aan vervanging toe...</figcaption>
         </figure>
     </section>
