--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <a href="images/4.JPG" class="lb" data-index="2"><img loading="lazy" src="images/4.JPG" alt="Vervanging onderdeel" onerror="this.src=''; this.parentElement.style.background='linear-gradient(135deg,#2a3142,#171b23)'"/></a>
         <a href="images/6.JPG" class="lb" data-index="2"><img loading="lazy" src="images/6.JPG" alt="Inrichting container" onerror="this.src=''; this.parentElement.style.background='linear-gradient(135deg,#2a3142,#171b23)'"/></a>
         <a href="images/8.JPG" class="lb" data-index="2"><img loading="lazy" src="images/8.JPG" alt="Inriching container" onerror="this.src=''; this.parentElement.style.background='linear-gradient(135deg,#2a3142,#171b23)'"/></a>
-        <a href="images/9.JPG" class="lb" data-index="2"><img loading="lazy" src="images/9.JPG" alt="Inrichting container" onerror="this.src=''; this.parentElement.style.background='linear-gradient(135deg,#2a3142,#171b23)'"/></a>
+        <a href="images/9.JPG" class="lb" data-index="2"><img loading="lazy" src="images/9.JPG" alt="Plaatsen van kooi" onerror="this.src=''; this.parentElement.style.background='linear-gradient(135deg,#2a3142,#171b23)'"/></a>
       </div>
     </div>
   </section>
