--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <div class="nav">
     <div class="container nav-inner">
       <div class="brand">
-        <img src="images/5.png" alt="Logo Dirkx Techniek" onerror="this.style.visibility='hidden'">
+        <img src="images/5.PNG" alt="Logo Dirkx Techniek" onerror="this.style.visibility='hidden'">
         <span>DIRKX TECHNIEK</span>
       </div>
       <div class="menu">
